--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ out/
 # Development
 .env
 .env.local
-.env.development.local
+.env.development
 .env.test.local
 .env.production.local
 
@@ -39,3 +39,5 @@ mongodb/
 
 
 docs/dev
+.specstory
+
