--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.19",
     "@tanstack/react-query": "^4.24.0",
     "axios": "^1.3.0",
+    "dotenv": "^17.2.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
