Cookies domain adecuado

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "seed": "ts-node scripts/seed.ts",
+    "seed": "NODE_ENV=production ts-node scripts/seed.ts",
     "seed:dev": "NODE_ENV=development npm run seed"
   },
   "keywords": [],
